little edits in recipes logic